--- a/public/langs/zhCn.json
+++ b/public/langs/zhCn.json
@@ -1,3 +1,16 @@
 {
-	"test": "测试"
+	"page1": {},
+	"page2": {
+		"title_pic": "/pageIntro-title-zhCn.png",
+		"title": "基于 视觉复杂度 的 城市街景搜索引擎",
+		"text1": "在数字化与虚拟化的浪潮下，实体已不再是城市存在的唯一方式，城市的定义正在经历着深刻的变革。\n\t\t\t\t如今，虚拟世界与现实世界越来越融合，人们可以通过互联网和数字技术在无需身临其境的情况下探索城市。\n\t\t\t\t其中，在线街景应用（谷歌街景、百度街景等）便是探索世界各地城市形象与风貌的有效手段。\n\t\t\t\t然而，随着智慧城市信息建设进入快车道，人们对城市形象探索有了更高的需求，例如，快速搜索特定街景、智能交互城市环境，明智决策规划发展。\n\t\t\t\t但现有的在线街景应用却无法摆脱线性单一的探索模式，人们只能被限制在虚拟的街道上单向点击前进，无法对城市形象进行多样化的交互探索体验。\n\t\t\t\t因此，我们开发了一个“城市街景搜索引擎”应用，通过收集、分析和描述整个城市街景的视觉信息数据流，以达到灵活、多维度、高效地深入挖掘城市视觉环境特征的目的，从而改变现代城市形象的管理与探索的方式。",
+		"text2": "在此“城市街景搜索引擎”中，我们着眼于街景的纹理、形状、色彩这三个基于感知的视觉特征，并以视觉复杂度的方式去度量其视觉信息量。这样做的原因有三：",
+		"text3": "",
+		"text4": "",
+		"text5": "",
+		"text6": "",
+		"text_paper": "",
+		"text7": ""
+	},
+	"page3": {}
 }
