--- a/public/langs/en.json
+++ b/public/langs/en.json
@@ -1,5 +1,12 @@
 {
-	"page1": {},
+	"global": {
+		"pagePrev": "Last page",
+		"pageNext": "Next page"
+	},
+	"page1": {
+		"startEn": "EXPLORE(English)",
+		"startZhCn": "搜索中文"
+	},
 	"page2": {
 		"title_pic": "/pageIntro-title-en.png",
 		"title": "Streetscape Search Engine Based on Visual Complexity",
@@ -10,7 +17,49 @@
 		"text5": "3. Currently, the digital analysis of streetscapes typically relies on image semantic segmentation, which involves extracting object elements such as the sky, buildings, plants, and roads from the streetscape and quantifying them based on their pixel proportions. However, this method only depicts the object of the streetscape, but fails to capture their impressions. As a result, the visual complexity of streetscape's texture, shape, and color provides a novel perspective for the city image. Simultaneously, it also serves as an effective complement to existing methods, enabling a more comprehensive understanding of the urban streetscape in the digital context.",
 		"text6": "To sum up, the visual complexity of texture, shape, and color encapsulates the volume of information in urban visual perception. Building upon this notion, the \"Urban Streetscape Search Engine\" seamlessly merges visual perceptual characteristics, treetscapes, and their geographical information, crafting an intriguing approach to the exploration of city images. Click \"Next page\" to embark on a journey through the city's vibrant visual experiences together! Furthermore, the video on the left provides insights into the application techniques of the \"Urban Streetscape Search Engine\". This application is developed based on the research paper: ",
 		"text_paper": "Ma, L., Guo, Z., Lu, M., He, S. & Wang, M. (2023). Developing an urban streetscape indexing based on visual complexity and self-organizing map. Building and Environment, 242, 110549.",
-		"text7": "This work was supported by the National Social Science Fund of China (No.21BMZ111), the National Natural Science Foundation of China (No.52308015, No.52208014), the Guangdong Basic and Applied Basic Research Foundation (No.2021A1515110546) , and the Guangzhou Science and Technology Planning Project (No.202102020683). Additionally, we extend our appreciation to Chaoyang Deng, an undergraduate student at Guangdong University of Technology, for his valuable contributions in the preliminary research, GIS data analysis, and data organization work."
+		"text7": "This work was supported by the National Social Science Fund of China (No.21BMZ111), the National Natural Science Foundation of China (No.52308015, No.52208014), the Guangdong Basic and Applied Basic Research Foundation (No.2021A1515110546) , and the Guangzhou Science and Technology Planning Project (No.202102020683). Additionally, we extend our appreciation to Chaoyang Deng, an undergraduate student at Guangdong University of Technology, for his valuable contributions in the preliminary research, GIS data analysis, and data organization work.",
+		"feat1": "*The texture characteristics of streetscapes",
+		"feat2": "*The shape characteristics of streetscapes",
+		"feat3": "*The color characteristics of streetscapes",
+		"feat4": "*Streetscapes graded from low to high on the scale of \"sefety\"",
+		"feat4_link": " (image courtesy: Nikhil Naik, et al, 2014)",
+		"feat5": "*Streetscapes graded from low to high on the scale of \"visual quality\"",
+		"feat5_link": "(image courtesy: Yu Ye, et al, 2019)",
+		"feat6": "*Streetscapes graded from low to high on the scale of \"beauty\" ",
+		"feat6_link": "  (image courtesy: Abhimanyu Dubey, et al, 2016)",
+		"feat7": "*Streetscapes graded from low to high on the scale of \"healing perception\"",
+		"feat7_link": "(image courtesy: Leiqing Xu, et al, 2020)",
+		"feat8": "*Streetscapes share similar object-based configurations but exhibit distinct visual perceptions"
 	},
-	"page3": {}
+	"page3": {
+		"title": "Streetscape Searching Engine - HongKong",
+		"findGeo": "Find Geo-location",
+		"findStreet": "Find Streetscape",
+		"default": "Default",
+		"hide": "Hide / Show",
+		"grondSteet": "Ground-Streetscape dynamic",
+		"餐饮服务": "en",
+		"风景名胜": "en",
+		"公司企业": "en",
+		"购物服务": "en",
+		"交通设施服务": "en",
+		"金融保险服务": "en",
+		"科教文化服务": "en",
+		"商务住宅": "en",
+		"生活服务": "en",
+		"体育休闲服务": "en",
+		"医疗保健服务": "en",
+		"住宿服务": "en",
+		"sliderHigh": "high",
+		"sliderLow": "low",
+		"introText": "The presented \"Feature Map\" re-organizes the spectrum of Hong Kong's streetscapes based on their \"visual perceptual similarity\", achieved through an analysis of textures, shapes, and colors quantified within the street scenes. In comparison with a \"geographic map\", this \"Feature Map\" presents urban streetscapes in a novel alternative logic. Consequently, our exploration of the city image gains flexibility and fun! Now, feel free to begin your serch of streescapes by engaging with the following actions:",
+		"introText2": "1. Find Geo-location: efficiently pinpoint the geo-location within the city according to selected streetscapes.",
+		"introText3": "· Slide the bars on the left to witness the effect of the visual complexity level of \"texture\", \"shape\", and \"color\" in formalizing various streetscapes in the \"Feature Map\". Furthermore, Click on the left-side \"Find geo-location\" to explore where these streetscapes are positioned on the left \"geo-map\". This action can be useful in different situations, like seeking locations with vibrant color combinations for urban color planners or art painters, choosing visually simple routes for city navigation, and more.\n· Based on your preferences and ideas, handpick streetscapes within the \"feature map\", then click \"Find geo-location\" to uncover how these chosen streetscapes are distributed on the \"geo-map\". This action can be useful in identifying high-density urban areas for urban heat studies, or assisting tourists in discovering natural scenic spots within the city.",
+		"introText4": "2. Find Streetscapes: gain insights into the types and features of the included streetscapes based on selected geo-location.",
+		"introText5": "· Within the \"Geo-map,\" delineate your desired area using polylines. Click \"Find Streetscapes\", the \"Feature Map\" will unveil a color-coded heat map that showcases the types and quantities of streetscapes in that region. Darker hues indicate a greater prevalence of a specific type of streetscapes. This functionality finds utility in swiftly auditing street images in specific zones, evaluating the heterogeneity of street environments, controlling the visual rhythm of a street, and more. The \"Hide/Show\" button enhances the convenience of viewing the respective streetscape types.",
+		"introText6": "3. Ground-streetscape dynamic: utilizing color spectrum markers, \"Feature Map\" and \"Geo-map\" are seamlessly linked, presenting distinct distribution patterns of the city.",
+		"introText7": "· Clicking on \"Ground-streetscape dynamic\" triggers the color mask of \"Feature Map\", allowing for a fine-grained distinction of various streetscape types; Simultaneously, the distribution of streetscapes is vividly illustrated on \"Geo-map\" through using corresponding color-marked dots. The \"Hide/Show\" button enhances the convenience of viewing the respective streetscape types.",
+		"introCollapse": "- Unfold/fold -",
+		"gridTitle": "-- \"Feature map\" of streetscapes --"
+	}
 }
