feat(project): 自定义配置输出模板

--- a/public/langs/template/zhCn.json
+++ b/public/langs/template/zhCn.json
@@ -1,65 +1,1 @@
-{
-    "global": {
-        "pagePrev": "上一页",
-        "pageNext": "下一页"
-    },
-    "page1": {
-        "startEn": "EXPLORE(English)",
-        "startZhCn": "搜索(中文)"
-    },
-    "page2": {
-        "title_pic": "/pageIntro-title-zhCn.png",
-        "title": "基于 视觉复杂度 的 城市街景搜索引擎",
-        "text1": "在数字化与虚拟化的浪潮下，实体已不再是城市存在的唯一方式，城市的定义正在经历着深刻的变革。\n\t\t\t\t如今，虚拟世界与现实世界越来越融合，人们可以通过互联网和数字技术在无需身临其境的情况下探索城市。\n\t\t\t\t其中，在线街景应用（谷歌街景、百度街景等）便是探索世界各地城市形象与风貌的有效手段。\n\t\t\t\t然而，随着智慧城市信息建设进入快车道，人们对城市形象探索有了更高的需求，例如，快速搜索特定街景、智能交互城市环境，明智决策规划发展。\n\t\t\t\t但现有的在线街景应用却无法摆脱线性单一的探索模式，人们只能被限制在虚拟的街道上单向点击前进，无法对城市形象进行多样化的交互探索体验。\n\t\t\t\t因此，我们开发了一个“城市街景搜索引擎”应用，通过收集、分析和描述整个城市街景的视觉信息数据流，以达到灵活、多维度、高效地深入挖掘城市视觉环境特征的目的，从而改变现代城市形象的管理与探索的方式。",
-        "text2": "在此“城市街景搜索引擎”中，我们着眼于街景的纹理、形状、色彩这三个基于感知的视觉特征，并以视觉复杂度的方式去度量其视觉信息量。这样做的原因有三：",
-        "text3": "1. 凯文林奇在《城市意象》中提出，沿街的砖墙老屋、门前的热闹集市、街边的葱郁大树等，这些具有不同纹理、形状、色彩与组合模式的视觉肌理，往往会形成生动、强烈的心理图像， 是强化城市意象性(imageability)与易辨性(legibility)的感知方式。因此，纹理、形状、色彩是认识城市意象、印象、风貌形象的典型视觉特征。",
-        "text4": "在以往对城市街景与人类认知的耦合研究中，不难发现“视觉复杂度”可被看作是街景多种认知体验的底层逻辑与描述机制。因此，视觉复杂度是视觉信息传递中数量与能量的有效量化方式。",
-        "text5": "3. 目前，街景的数字解析通常依靠语义分割技术，即提取街景的天空、建筑、植物、道路等物质构成特征，并测算其各自的像素占比。但这种方法只能描述街景的“形态”，却并不能抓住街景的“神韵”，街景往往拥有相似的物质元素构成，却给人完全不同的视觉感受。 对此，街景纹理、形状、色彩特征的视觉复杂度为城市形象认知提供了一个新颖的探索角度。同时，也可作为现有方法的有效补充，在数字语境下更全面的掌握城市街景形象。",
-        "text6": "综上，纹理、形状、颜色的视觉复杂度代表了城市视觉感知的信息量，基于此的“城市街景搜索引擎”将视觉感知特征、街景及其地理信息融合，创造了一个有趣的城市探索方式。点击“下一页”，让我们一同来探索城市丰富的视觉体验吧！\n同时，在左侧的视频中，您可以了解有关“城市街景搜索引擎”的应用方法。此应用是基于以下论文而开发的：",
-        "text_paper": "Ma, L., Guo, Z., Lu, M., He, S. & Wang, M. (2023). Developing an urban streetscape indexing based on visual complexity and self-organizing map. Building and Environment, 242, 110549.",
-        "text7": "此研究受支持于国家社会科学基金(No.21BMZ111)、国家自然科学基金(No.52308015, No.52208014)、广东省基础与应用基础研究基金(No. 2021A1515110546)、广州市科技计划项目(No. 202102020683)。另外，感谢广东工业大学本科生邓朝阳同学前期的调研、GIS数据分析、与数据整理工作。",
-        "feat1": "*街景的纹理特征",
-        "feat2": "*街景的形状特征",
-        "feat3": "*街景的色彩特征",
-        "feat4": "*\"安全性”由低到高的街景",
-        "feat4_link": "*（图片来源：Nikhil Naik, et al, 2014）",
-        "feat5": "*\"视觉质量”由低到高的街景",
-        "feat5_link": "（图片来源：Yu Ye, et al, 2019）",
-        "feat6": "*\"美观性”由低到高的街景",
-        "feat6_link": "（图片来源：Abhimanyu Dubey, et al, 2016）",
-        "feat7": "*\"疗愈性”由低到高的街景",
-        "feat7_link": "（图片来源：徐磊青, 等, 2020）",
-        "feat8": "*物质构成相似的街景却有着完全不同的视觉感受"
-    },
-    "page3": {
-        "title": "街 景 搜 索 引 擎 — 香 港 站",
-        "findGeo": "寻址",
-        "findStreet": "寻景",
-        "default": "清空",
-        "hide": "隐藏 / 显示",
-        "grondSteet": "地景关系",
-        "餐饮服务": "餐饮服务",
-        "风景名胜": "名胜古迹",
-        "公司企业": "公司企业",
-        "购物服务": "购物服务",
-        "交通设施服务": "交通设施服务",
-        "金融保险服务": "金融保险服务",
-        "科教文化服务": "科教文化服务",
-        "商务住宅": "商务住宅",
-        "生活服务": "生活服务",
-        "体育休闲服务": "体育休闲服务",
-        "医疗保健服务": "医疗保健服务",
-        "住宿服务": "住宿服务",
-        "sliderHigh": "高",
-        "sliderLow": "低",
-        "introText": "以下“特征地图”通过分析街景中纹理、形状、颜色，将香港全境街景按“视觉感知相似性”重新排列。 相较于“地理地图”，“特征地图”是一种全新的城市形象呈现逻辑。因此，我们对城市形象的探索将变得更加灵活与有趣！现在，你可以尝试以下操作来进行街景信息的搜索：",
-        "introText2": "1. 寻址：根据街景，迅速定位其在城市中的地理位置。",
-        "introText3": "· 拖动左边的量值滑动条，看看“纹理”、“形状”、“颜色”的视觉复杂度变化，会在特征地图中形成怎样的街景？点击左侧“寻址”按键，进一步发现这些街景在“地理地图”中的分布。 这项操作可应用于：城市色彩研究或艺术家寻找城市中色彩组合丰富的场址，城市驾驶导航中选择视觉体验简洁的道路，等场景。 · 按照你的喜好与想法，在“特征地图”中选择街景，点击“寻址”，发现这些街景在“地理地图”中分布。 这项操作可应用于：城市热岛效应研究中定位城市高密度建筑街区，旅游者在城市中搜寻自然风光地带，等场景。",
-        "introText4": "2. 寻景：根据地理位置，了解其所包含街景的类型与特征。",
-        "introText5": "· 在“地理地图”中以多段线选择目标区域位置，点击“寻景”，“特征地图”中便以颜色标记的热力图表示区域内街景的组成类型与数量，颜色越深表明此类型街景越多。这项操作可应用于：某区域街景形象的快速审计、区域内街景环境的异质性评估，街道视觉感受的节奏控制，等场景。 “隐藏/显示”按键有助于更方便的查看对应街景类型。",
-        "introText6": "3. 地景关系：以色彩标记连接城市“特征地图”与“地理地图”，展现城市街景分布特征。",
-        "introText7": "· 点击“地景关系”，“特征地图”被色谱标记，细粒度区分不同街景类型；同时，“地理地图”中相应以色彩点展示了城市街景分布。“隐藏/显示”按键有助于更方便的查看对应街景类型。",
-        "introCollapse": "- 折叠/展开 -",
-        "gridTitle": "-- 街 景 “特 征 地 图” --"
-    }
-}
+{"global":{"pagePrev":"上一页","pageNext":"下一页"},"page1":{"startEn":"EXPLORE(English)","startZhCn":"搜索(中文)"},"page2":{"title_pic":"/pageIntro-title-zhCn.png","title":"基于 视觉复杂度 的 城市街景搜索引擎","text1":"在数字化与虚拟化的浪潮下，实体已不再是城市存在的唯一方式，城市的定义正在经历着深刻的变革。\n\t\t\t\t如今，虚拟世界与现实世界越来越融合，人们可以通过互联网和数字技术在无需身临其境的情况下探索城市。\n\t\t\t\t其中，在线街景应用（谷歌街景、百度街景等）便是探索世界各地城市形象与风貌的有效手段。\n\t\t\t\t然而，随着智慧城市信息建设进入快车道，人们对城市形象探索有了更高的需求，例如，快速搜索特定街景、智能交互城市环境，明智决策规划发展。\n\t\t\t\t但现有的在线街景应用却无法摆脱线性单一的探索模式，人们只能被限制在虚拟的街道上单向点击前进，无法对城市形象进行多样化的交互探索体验。\n\t\t\t\t因此，我们开发了一个“城市街景搜索引擎”应用，通过收集、分析和描述整个城市街景的视觉信息数据流，以达到灵活、多维度、高效地深入挖掘城市视觉环境特征的目的，从而改变现代城市形象的管理与探索的方式。","text2":"在此“城市街景搜索引擎”中，我们着眼于街景的纹理、形状、色彩这三个基于感知的视觉特征，并以视觉复杂度的方式去度量其视觉信息量。这样做的原因有三：","text3":"1. 凯文林奇在《城市意象》中提出，沿街的砖墙老屋、门前的热闹集市、街边的葱郁大树等，这些具有不同纹理、形状、色彩与组合模式的视觉肌理，往往会形成生动、强烈的心理图像， 是强化城市意象性(imageability)与易辨性(legibility)的感知方式。因此，纹理、形状、色彩是认识城市意象、印象、风貌形象的典型视觉特征。","text4":"在以往对城市街景与人类认知的耦合研究中，不难发现“视觉复杂度”可被看作是街景多种认知体验的底层逻辑与描述机制。因此，视觉复杂度是视觉信息传递中数量与能量的有效量化方式。","text5":"3. 目前，街景的数字解析通常依靠语义分割技术，即提取街景的天空、建筑、植物、道路等物质构成特征，并测算其各自的像素占比。但这种方法只能描述街景的“形态”，却并不能抓住街景的“神韵”，街景往往拥有相似的物质元素构成，却给人完全不同的视觉感受。 对此，街景纹理、形状、色彩特征的视觉复杂度为城市形象认知提供了一个新颖的探索角度。同时，也可作为现有方法的有效补充，在数字语境下更全面的掌握城市街景形象。","text6":"综上，纹理、形状、颜色的视觉复杂度代表了城市视觉感知的信息量，基于此的“城市街景搜索引擎”将视觉感知特征、街景及其地理信息融合，创造了一个有趣的城市探索方式。点击“下一页”，让我们一同来探索城市丰富的视觉体验吧！\n同时，在左侧的视频中，您可以了解有关“城市街景搜索引擎”的应用方法。此应用是基于以下论文而开发的：","text_paper":"Ma, L., Guo, Z., Lu, M., He, S. & Wang, M. (2023). Developing an urban streetscape indexing based on visual complexity and self-organizing map. Building and Environment, 242, 110549.","text7":"此研究受支持于国家社会科学基金(No.21BMZ111)、国家自然科学基金(No.52308015, No.52208014)、广东省基础与应用基础研究基金(No. 2021A1515110546)、广州市科技计划项目(No. 202102020683)。另外，感谢广东工业大学本科生邓朝阳同学前期的调研、GIS数据分析、与数据整理工作。","feat1":"*街景的纹理特征","feat2":"*街景的形状特征","feat3":"*街景的色彩特征","feat4":"*\"安全性”由低到高的街景","feat4_link":"*（图片来源：Nikhil Naik, et al, 2014）","feat5":"*\"视觉质量”由低到高的街景","feat5_link":"（图片来源：Yu Ye, et al, 2019）","feat6":"*\"美观性”由低到高的街景","feat6_link":"（图片来源：Abhimanyu Dubey, et al, 2016）","feat7":"*\"疗愈性”由低到高的街景","feat7_link":"（图片来源：徐磊青, 等, 2020）","feat8":"*物质构成相似的街景却有着完全不同的视觉感受"},"page3":{"title":"街 景 搜 索 引 擎 — 香 港 站","findGeo":"寻址","findStreet":"寻景","default":"清空","hide":"隐藏 / 显示","grondSteet":"地景关系","餐饮服务":"餐饮服务","风景名胜":"名胜古迹","公司企业":"公司企业","购物服务":"购物服务","交通设施服务":"交通设施服务","金融保险服务":"金融保险服务","科教文化服务":"科教文化服务","商务住宅":"商务住宅","生活服务":"生活服务","体育休闲服务":"体育休闲服务","医疗保健服务":"医疗保健服务","住宿服务":"住宿服务","sliderHigh":"高","sliderLow":"低","introText":"以下“特征地图”通过分析街景中纹理、形状、颜色，将香港全境街景按“视觉感知相似性”重新排列。 相较于“地理地图”，“特征地图”是一种全新的城市形象呈现逻辑。因此，我们对城市形象的探索将变得更加灵活与有趣！现在，你可以尝试以下操作来进行街景信息的搜索：","introText2":"1. 寻址：根据街景，迅速定位其在城市中的地理位置。","introText3":"· 拖动左边的量值滑动条，看看“纹理”、“形状”、“颜色”的视觉复杂度变化，会在特征地图中形成怎样的街景？点击左侧“寻址”按键，进一步发现这些街景在“地理地图”中的分布。 这项操作可应用于：城市色彩研究或艺术家寻找城市中色彩组合丰富的场址，城市驾驶导航中选择视觉体验简洁的道路，等场景。 · 按照你的喜好与想法，在“特征地图”中选择街景，点击“寻址”，发现这些街景在“地理地图”中分布。 这项操作可应用于：城市热岛效应研究中定位城市高密度建筑街区，旅游者在城市中搜寻自然风光地带，等场景。","introText4":"2. 寻景：根据地理位置，了解其所包含街景的类型与特征。","introText5":"· 在“地理地图”中以多段线选择目标区域位置，点击“寻景”，“特征地图”中便以颜色标记的热力图表示区域内街景的组成类型与数量，颜色越深表明此类型街景越多。这项操作可应用于：某区域街景形象的快速审计、区域内街景环境的异质性评估，街道视觉感受的节奏控制，等场景。 “隐藏/显示”按键有助于更方便的查看对应街景类型。","introText6":"3. 地景关系：以色彩标记连接城市“特征地图”与“地理地图”，展现城市街景分布特征。","introText7":"· 点击“地景关系”，“特征地图”被色谱标记，细粒度区分不同街景类型；同时，“地理地图”中相应以色彩点展示了城市街景分布。“隐藏/显示”按键有助于更方便的查看对应街景类型。","introCollapse":"- 折叠/展开 -","gridTitle":"-- 街 景 “特 征 地 图” --"}}
