--- a/public/langs/locale/zhCn.json
+++ b/public/langs/locale/zhCn.json
@@ -60,6 +60,8 @@
 		"introText6": "3. 地景关系：以色彩标记连接城市“特征地图”与“地理地图”，展现城市街景分布特征。",
 		"introText7": "· 点击“地景关系”，“特征地图”被色谱标记，细粒度区分不同街景类型；同时，“地理地图”中相应以色彩点展示了城市街景分布。“隐藏/显示”按键有助于更方便的查看对应街景类型。",
 		"introCollapse": "- 折叠/展开 -",
-		"gridTitle": "-- 街 景 “特 征 地 图” --"
+		"gridTitle": "-- 街 景 “特 征 地 图” --",
+		"preferenceSlider": "景趣偏好",
+		"preferenceBtn": "偏好地图"
 	}
 }
