--- a/public/langs/locale/zhCn.json
+++ b/public/langs/locale/zhCn.json
@@ -45,7 +45,7 @@
 		"交通设施服务": "交通设施服务",
 		"金融保险服务": "金融保险服务",
 		"科教文化服务": "科教文化服务",
-		"商务住宅": "商务住宅",
+		"住宅": "商务住宅",
 		"生活服务": "生活服务",
 		"体育休闲服务": "体育休闲服务",
 		"医疗保健服务": "医疗保健服务",
