--- a/public/langs/locale/en.json
+++ b/public/langs/locale/en.json
@@ -8,7 +8,6 @@
 		"startZhCn": "搜索中文"
 	},
 	"page2": {
-		"title_pic": "/pageIntro-title-en.png",
 		"title": "Streetscape Search Engine Based on Visual Features",
 		"text1": "\n            Amidst the trend of digitization and virtulization, physical presence is no longer the exclusive notion of a city, and the very definition of a city is currently undergoing a profound evolution. Nowadays, the virtual world is becoming increasingly intertwined with the physical reality, allowing individuals to explore cities through the internet and digital technologies without the constraints of physical presence. For instance, online street view applications like Google Street View or Baidu Street View serve as effective tools for exploring city images worldwide.\n\nHowever, with the advancement of information infrastructure in smart cities, the desire for the exploration of city images has surged. This includes the rapid retrieval of specific streetscapes, intelligent interaction with urban environments, and informed decision-making for urban planning and development. But these online street view applications still remain constrained by a \"monotonous\" exploration mode, where users are limited to one-way clicks, navigating virtual streets without the opportunity for diverse and interactive urban experiences.\n\nHence, we have introduced an \"Urban Streetscape Search Engine\" application, which systematically collects, analyzes, and characterize the visual information stream of the city streetscapes. Aiming to achieve a dynamic, multi-dimensional, and efficient exploration of urban streetscapes, ultimately revolutionizing the methods of managing and exploring modern urban images.\n",
 		"text2": "In this \"Urban Streetscape Search Engine\", we specifically focus on three categories of visual representation of street scenes: physical representation, impression representation, and isovist representation.",
@@ -20,8 +19,6 @@
 		"text7": "This work was supported by the National Social Science Fund of China (No.21BMZ111), the National Natural Science Foundation of China (No.52308015, No.52208014), the Guangdong Basic and Applied Basic Research Foundation (No.2021A1515110546) , and the Guangzhou Science and Technology Planning Project (No.202102020683). Additionally, we extend our appreciation to Chaoyang Deng, an undergraduate student at Guangdong University of Technology, for his valuable contributions in the preliminary research, GIS data analysis, and data organization work.",
 		"feat1": "*Physical representation of the street view",
 		"feat4": "*Impression representation of the street view",
-		"feat4_link": " (image courtesy: Nikhil Naik, et al, 2014)",
-		"feat7_link": "(image courtesy: Leiqing Xu, et al, 2020)",
 		"feat8": "*Isovist representation of the street view"
 	},
 	"page3": {
@@ -38,7 +35,7 @@
 		"交通设施服务": "Transportation service",
 		"金融保险服务": "Financial service",
 		"科教文化服务": "Educational service",
-		"住宅": "Residence",
+		"商务住宅": "Residence",
 		"生活服务": "Public service",
 		"体育休闲服务": "Sport and leisure",
 		"医疗保健服务": "Health service",
